--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,17 +1,10 @@
-.navbar{
-    /* background-color:#252525; */
-    color: whitesmoke;
-    font-size: 2rem;
-    
-    height: 60px;
-    display: flex;
-    color: #f5f5f5;
-    position: sticky;
-    top: 0;
-    
-}
-.navbar label{
+.navbar-brand {
     font-family: 'Georama', sans-serif;
-    width: 400;
-    left: 100px;
+    font-size: 2.2rem;
+    font-weight: bold;
+    padding: 1px;
+  }
+.btn-nav{
+    padding: 10px 30px;
+    
 }
